--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 		<link rel="stylesheet" type="text/css" href="css/can_do.css">
 	</head>	
 	<body>
-
+		<header>
+			<span class="page_title">Can-Do</span>
+			<input type="button" class="bt_settings">
+		</header>
+		<div class="input_data">
+				<div class="new_task">
+					<input type="text" placeholder="Add new task" class="new_task">
+				</div>
+				<input type="button" class="bt_create">
+		</div>
+		<div>
+			<span>This is the area for the new tasks</span>
+			<ul class="task_list"></ul>
+		</div>
 	</body>
 </html>
