--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<title>Can-Do</title>
 		<script type="text/javascript" src="script/can_do.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/can_do.css">
 	</head>	
 	<body>
 		<header>
+			<span class="date">01/07/2013</span>
 			<span class="page_title">Can-Do</span>
 			<input type="button" class="bt_settings">
 		</header>
