Still working on design

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 				</div>
 				<input type="button" class="bt_create">
 		</div>
-		<div class="tasks">
+		<div class="tasks"></div>
+		<div class="placeholder"></div>
+		<div class="footer">
+			<span>Tasks: 0</span>
 		</div>
 	</body>
 </html>
