Implements task counter

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="tasks"></div>
 		<div class="placeholder"></div>
 		<div class="footer">
-			<span>Tasks: 0</span>
+			<span class="counter">Tasks: 0</span>
 		</div>
 	</body>
 </html>
