--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<title>Can-Do</title>
-		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/touchSwipe.min.js"></script>
+		<script type="text/javascript" src="js/zepto.min.js"></script>
+		<script type="text/javascript" src="js/zepto.touch.js"></script>
 		<script type="text/javascript" src="js/can_do.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/can_do.css">
 	</head>	
