--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Can-Do</title>
 		<script type="text/javascript" src="js/zepto.min.js"></script>
 		<script type="text/javascript" src="js/zepto.touch.js"></script>
-		<script type="text/javascript" src="js/sortable.js"></script>
+		<script type="text/javascript" src="js/extras.js"></script>
 		<script type="text/javascript" src="js/can_do.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/can_do.css">
 	</head>	
