New design and some more details

--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
 		<link rel="stylesheet" type="text/css" href="css/can_do.css">
 	</head>	
 	<body>
+		<!--
 		<header>
 			<input type="button" class="bt_inventory">
 			<span class="page_title">Can-Do</span>
 			<input type="button" class="bt_settings">
 		</header>
+		-->
 		<div class="input_data">
+				<input type="button" class="bt_more">
 				<div class="new_task">
 					<input type="text" placeholder="Add new task" class="new_task">
 				</div>
 				<input type="button" class="bt_create">
 		</div>
 		<div class="tasks">
-			<span class="list_title">WHAT I'M GOING TO DO...</span>
+			<span class="list_title">WHAT AM I GOING TO DO?</span>
 			<ul id="today" class="task_container"></ul>
-			<span class="list_title">WHAT I CAN DO...</span>
+			<span class="list_title">WHAT CAN I DO?</span>
 			<ul id="inventory" class="task_container"></ul>
 		</div>
 	</body>
